@@ -188,8 +188,6 @@ const DifxInput *DifxInput2FitsML(const DifxInput *D,
 	   {
 	   	np = scan->nPoly;
 		timeInt = job->polyInterval / 86400.0;
-	      	printf("\n    Scan %d -- using polynomial model", s);
-	        printed++;
 	   }
 	   else
 	   {
@@ -233,7 +231,7 @@ const DifxInput *DifxInput2FitsML(const DifxInput *D,
 
 	          for(k = 0; k < array_N_POLY; k++)
 		  {
-		    gpoly[k] = P->delay[k]*1.0e-6;
+		    gpoly[k] = -P->delay[k]*1.0e-6;
 		  }
 		}
 		else	   /* use tabulated model */
